# cabal

./: .gitignore  .tool-versions
cabal-install/: .gitignore  flake.nix  shell.nix
cabal-install/main/: Main.hs
cabal-install/src/Distribution/Client/: Config.hs  HttpUtils.hs  Setup.hs  Upload.hs
cabal-install/src/Distribution/Client/Types/: Credentials.hs
cabal-install/tests/: UnitTests.hs
cabal-install/tests/UnitTests/Distribution/Client/: HttpUtils.hs  Upload.hs
cabal-install/tests/UnitTests/Distribution/Client/Types/: Credentials.hs
cabal-install/tests/fixtures/files/fake/: fake.cabal
cabal-install/tests/fixtures/files/test-upload/: CHANGELOG.md  LICENSE  cabal.project  test-upload.cabal
