cabal-version:   3.0
name:            test-upload
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
author:          Test
maintainer:      test@hackage.com
category:        Testing
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    build-depends:    base ^>=4.17.0.0
    hs-source-dirs:   src
    default-language: Haskell2010
